--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_br">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
   </head>
   <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <div>
+      <div>
+        <img src="d9f94532-d333-47a5-b889-4df095b5d692.jpg"
+        "img style='float:left'" alt="Perfil"
+          width="100"/>
+        <h2>Camilla Tainá</h2>
+        <p>Front- End Developer</p>
+      </div>
+
+      <div>
+        
+        <br><h3>Perfil</h3>
+        <p>
+          Camilla Tainá, 20 anos, mora em Olinda e<br />
+          estou estudando programação no programa <br />
+          Start Latam Brasil - Rede Cidadã.
+        </p>
+      </div>
+
+      <div>
+
+        <h3>Experiencia Proficional</h3>
+        <p>
+          <ul>
+            <li>Loja de Roupa - 4 Meses<br>
+              Cargo: Vendedora e Caixa.<br>
+              Sem carteira assinada</li>
+              <li>Professora de Reforço<br>
+                Autônoma - 8 Meses<br>
+          </ul>
+        </p>
+      </div>
+
+      <di>
+
+        <h3>Educacao</h3>
+        <ul>
+          <li>Ensino médio completo<br>
+          Erem Professor Arnaldo Carneiro Leão - 2017</li>
+          <li>Inglês Básico - Programa Ganhe o Mundo - 2016</li>
+          <li>Pacote Office - Aprendido pela internet</li>
+        </ul>
+      </div>
+
+      <div>
+
+        <h3>Projetos</h3>
+
+      </div>
+
+    </div>
   </body>
 </html>
